# trendcn

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: trendcn.yml
data/: .gitkeep
docs/: index.html  monthly.html  weekly.html
src/: __init__.py  config.py  generator.py  scraper.py  subscription.py  translator.py
